/*
 * $Id: ChangeLog,v 1.3 2002/09/19 20:02:02 what32 Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-09-25 19:19 UTC +1000 AJ Wos <andrwos@aust1.net>
   * All files
     * Fixed misc bugs

2002-09-19 16:56 UTC -0300 Augusto Infante <systems@quesoro.com>
  + TControl.prg
  * TWindow.prg
  * TForm.prg
    + class TFrame
  
2002-09-16 02:24 UTC -0300 Augusto Infante <systems@quesoro.com>
  + TForm.prg
  + TMenu.prg

2002-09-15 04:11 UTC -0300 Augusto Infante <systems@quesoro.com>
  + TApplication.prg
  + TWindow.prg