@@ -15,7 +15,8 @@ WHOOOBJ    = TApplication.obj TWindow.obj TForm.obj TControl.obj \
              TMenu.obj TPopup.obj TMenuItem.obj TrackMenu.obj \
              TCButton.obj TCEdit.obj TCCheck.obj TCCombo.obj TCRadio.obj \
              TCStatic.obj TFrame.obj TPanel.obj TCListBox.obj TCStatusBar.obj \
-             TCRebar.obj TCToolBar.obj TabControl.obj TCGroupBox.obj TSplash.obj
+             TCRebar.obj TCToolBar.obj TabControl.obj TCGroupBox.obj TSplash.obj \
+             TTreeView.obj TTVItem.obj
 
 !include $(WHO_DIR)\env\makelib.b32
 
