@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3 2002/09/19 20:02:02 what32 Exp $
+ * $Id: ChangeLog,v 1.4 2002/09/25 09:19:48 andy_wos Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-10-03 16:56 UTC -0300 Augusto Infante <systems@quesoro.com>
+  + TTreeView.prg
+  + TTvItem.prg
 
 2002-09-25 19:19 UTC +1000 AJ Wos <andrwos@aust1.net>
    * All files
